--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	
 </head>
 <body>
-    <div id="app"></div>
-    <script src="/dist/common.js"></script>
-    <script src="/dist/build.js"></script>
+    <div id="app">
+        <!--<router-view></router-view>-->
+    </div>
+    <!--<script src="dist/common.js"></script>-->
+    <script src="dist/build.js"></script>
 </body>
 </html>
